# nixwebr.ing

./: .envrc  .gitignore  README.md  flake.nix  webring.nix
.forgejo/workflows/: deploy-front.yaml
server/: Cargo.toml  default.nix  package.nix
server/src/: main.rs  next.rs  prev.rs  random.rs  shift.rs  status.rs  types.rs
site/: index.css  index.nix  invalid-member.nix  package.nix
