[package]
name = "nixwebring-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.42"
env_logger = "0.11.8"
html-escape = "0.2.13"
ntex = { version = "2.17.0", features = [ "tokio", "rustls" ] }
ntex-files = "2.1.0"
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = [ "rustls-tls" ] }
tokio = "1.48.0"
zasa = { version = "0.7.0", features = [ "derive" ] }
