[package]
name = "nixwebring-server"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.43"
env_logger = "0.11.9"
fantoccini = { version = "0.22.0", default-features = false, features = [ "rustls-tls" ] }
html-escape = "0.2.13"
ntex = { version = "3.3.0", features = [ "tokio", "rustls" ] }
ntex-files = "3.1.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", default-features = false, features = [ "rustls" ] }
tokio = "1.49.0"
zasa = { version = "0.7.0", features = [ "derive" ] }
